--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "lun-test",
   "version": "1.0.0",
@@ -40,6 +39,7 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-inject": "~3.0.0",
     "gulp-jshint": "^2.0.1",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-shell": "^0.5.2",
     "gulp-uglify": "^1.5.3",
